--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "@supabase/ssr": "^0.7.0",
+    "@supabase/supabase-js": "^2.75.0",
+    "lucide-react": "^0.546.0",
     "next": "15.5.4",
     "pdf-lib": "^1.17.1",
     "pdf2pic": "^3.2.0",
